<resources>
    <string name="app_name">HStream</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="pd_go_to" translatable="false">M13,13L17,17L21,13H18V10C18,6.1,14.9,3,11,3S4,6.1,4,10V17H6V10C6,7.2,8.2,5,11,5S16,7.2,16,10V13H13M,16,19H18V21H16V19Z</string>
    <string name="pd_refresh" translatable="false">M17.65,6.35C16.2,4.9 14.21,4 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C15.73,20 18.84,17.45 19.73,14H17.65C16.83,16.33 14.61,18 12,18A6,6 0 0,1 6,12A6,6 0 0,1 12,6C13.66,6 15.14,6.69 16.22,7.78L13,11H20V4L17.65,6.35Z</string>
    <string name="pd_magnify" translatable="false">M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z</string>

    <string name="go_to_hint">Page %1$d, total %2$d pages</string>
    <string name="go_to">Go to</string>

    <!-- Preference framework strings. -->
    <string name="ok">OK</string>
    <!-- Preference framework strings. -->
    <string name="cancel">Cancel</string>
    <!-- Preference framework strings. -->
    <string name="yes">OK</string>
    <!-- Preference framework strings. -->
    <string name="no">Cancel</string>

    <string name="error_invalid_number">Invalid number</string>
    <string name="error_out_of_range">Out of range</string>

    <!-- Gallery List -->
    <string name="gallery_list_search_bar_hint_hstream">Search What You Want</string>
    <string name="gl_get_source_fail">Can not find the video source</string>
    <string name="source_no_found">source no find</string>
    <string name="source_loading">source loading</string>
    <string name="list_menu_download">Download</string>
    <string name="list_menu_subtitle">Subtitle</string>
    <string name="list_menu_refresh">Refresh</string>

    <!-- Subtitle -->
    <string name="subtitle_text">Subtitle</string>

    <!-- Title for error alert when a video cannot be played.  it can be used by any app. -->
    <string name="VideoView_error_title">Video problem</string>
    <!-- Text for error alert when a video container is not valid for progressive download/playback. -->
    <string name="VideoView_error_text_invalid_progressive_playback">This video isn\'t valid for streaming to this device.</string>
    <!-- Text for error alert when a video cannot be played. it can be used by any app. -->
    <string name="VideoView_error_text_unknown">Can\'t play this video.</string>
    <!-- Button to close error alert when a video cannot be played -->
    <string name="VideoView_error_button">OK</string>

    <!-- -->
    <string name="press_twice_exit">Press twice to exit</string>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_download">Download</string>
    <string name="menu_release">Release Calendar</string>

    <!-- download -->
    <string name="ticket_download_info_add">Add Download</string>
    <string name="ticket_download_info_complete">Complete Download</string>
    <string name="no_download_info">Download items will be shown here</string>
    <string name="stat_download_action_stop_all">Stop All</string>
    <string name="stat_download_done_title">Download Finished</string>
    <string name="stat_download_loading_title">Downloading</string>
    <string name="download_state_none">Idle</string>
    <string name="download_state_wait">Waiting</string>
    <string name="download_state_downloading">Downloading</string>
    <string name="download_state_downloaded">Downloaded</string>
    <string name="download_state_failed">Failed</string>
    <string name="download_state_failed_2">%d incomplete</string>
    <string name="download_state_finish">Done</string>

    <string name="download_start_all">Start All</string>
    <string name="download_stop_all">Stop All</string>

    <!-- common -->
    <string name="common_delete">Delete</string>
    <string name="common_play">Play</string>
    <string name="common_subtitle">Subtitle</string>

    <!-- Favorite -->
    <string name="no_favorite_info">Favorite items will be added here</string>

    <string name="error_status_code_400" translatable="false">Bad Request</string>
    <string name="error_status_code_401" translatable="false">Unauthorized</string>
    <string name="error_status_code_402" translatable="false">Payment Required</string>
    <string name="error_status_code_403" translatable="false">Forbidden</string>
    <string name="error_status_code_404" translatable="false">Not Found</string>
    <string name="error_status_code_405" translatable="false">Method Not Allowed</string>
    <string name="error_status_code_406" translatable="false">Not Acceptable</string>
    <string name="error_status_code_407" translatable="false">Proxy Authentication Required</string>
    <string name="error_status_code_408" translatable="false">Request Timeout</string>
    <string name="error_status_code_409" translatable="false">Conflict</string>
    <string name="error_status_code_410" translatable="false">Gone</string>
    <string name="error_status_code_411" translatable="false">Length Required</string>
    <string name="error_status_code_412" translatable="false">Precondition Failed</string>
    <string name="error_status_code_413" translatable="false">Request Entity Too Large</string>
    <string name="error_status_code_414" translatable="false">Request-URI Too Long</string>
    <string name="error_status_code_415" translatable="false">Unsupported Media Type</string>
    <string name="error_status_code_416" translatable="false">Requested Range Not Satisfiable</string>
    <string name="error_status_code_417" translatable="false">Expectation Failed</string>

    <string name="error_status_code_500" translatable="false">Internal Server Error</string>
    <string name="error_status_code_501" translatable="false">Not Implemented</string>
    <string name="error_status_code_502" translatable="false">Bad Gateway</string>
    <string name="error_status_code_503" translatable="false">Service Unavailable</string>
    <string name="error_status_code_504" translatable="false">Gateway Timeout</string>
    <string name="error_status_code_505" translatable="false">HTTP Version Not Supported</string>

    <string name="error_bad_status_code">Bad status code: %d</string>
    <string name="error_timeout">Timeout</string>
    <string name="error_unknown_host">Unknown host</string>
    <string name="error_redirection">Too many redirections</string>
    <string name="error_socket">Network error</string>
    <string name="error_unknown">Weird</string>
    <string name="error_cant_find_activity">Can\'t find the application</string>
    <string name="error_cannot_parse_the_url">Can\'t parse the url</string>
    <string name="error_not_folder_path">Not folder path</string>
    <string name="error_no_provider">No provider</string>
    <string name="error_decoding_failed">Decoding failed</string>
    <string name="error_not_found">Not found</string>
    <string name="error_empty">Empty</string>
    <string name="error_invalid_zip_file">Invalid zip file</string>
    <string name="error_reading_failed">Reading Failed</string>
    <string name="error_write_failed">Write failed</string>
    <string name="error_parse_error">Parse error</string>
    <string name="error_509">509</string>
    <string name="error_invalid_url">Invalid url</string>
    <string name="error_get_ptoken_error">Get pToken error</string>
    <string name="error_invalid_specify_gallery">Keyword should looks like \"618395 0439fa3666\" for specify gallery</string>
    <string name="error_cant_create_temp_file">Can\'t create temp file</string>
    <string name="error_cant_save_image">Can\'t save image</string>

    <string name="msg_last_page">last page -_-</string>

    <!-- Dialog -->
    <string name="dialog_close">Close</string>

</resources>
