<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/menu_favorite"/>
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/v_download_black_x24"
            android:title="@string/menu_download"/>

        <item
            android:id="@+id/nav_release"
            android:icon="@drawable/ic_release_black_24dp"
            android:title="@string/menu_release"/>

        <item
            android:id="@+id/nav_stub"
            android:title="stub"
            android:visible="false"/>
    </group>

</menu>
